--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo"><a href="#">首页</a></div>
                 <ul>          	
                     <li><a href="#">首页</a></li>
-                    <li><a href="#">链接2</a></li>
+                    <li><a href="article-page.htm">文章</a></li>
                     <li><a href="#">链接3</a></li>
                     <li><a href="#">链接4</a></li>
                 </ul>
